Fixed: FBD axes and label block mouse events, even when non-rotatable
forces-and-motion: Added combo box for object selection for graphing tab
forces-and-motion: Fixed: FBD's don't update on friction coefficient changes in Friction tab
forces-and-motion: Fixed: FBD's don't update on mass/gravity changes in Friction tab
forces-and-motion: Added adjustable friction, mass, and gravity with sliders
forces-and-motion: Removed selectable object in Friction tab
Renamed control panel subpanel titles to make more sense
forces-and-motion: Removed Ramp Angle control from control panel
forces-and-motion: Extended floor segment in both directions when walls are removed
forces-and-motion: Removed angle indicator
Fixed: Airborne motion doesn't record/playback position and velocity
Fixed: File cabinet image disappears after airborne => playback
Fixed: Record/playback buttons don't always repaint when they should, fixed by reverting to asynchronous painting
Fixed: Wall force on FBD doesn't update continuously
Improved physics for wall force, and integrated with total force
Incorporated gravity force into right-hand-side wall force
Fixed: Thermal energy increases slightly during collision with frictionless mode
Make sure timeline and charts don't record beyond the max time range, to reduce memory leaks
Fixed: Drops don't get cleared on playback
Fixed: Sim starts playing back after dragging the timeline slider thumb
Removed unused string keys from previous versions from English localization file (50+ strings)
# 1.03.34 (34505) Aug 27, 2009
Fixed location of FBD for robot moving company game
# 1.03.33 (34503) Aug 27, 2009
Made sure free body diagram location is acceptable in all tabs, use the default location unless the default location goes offscreen.
Added record/playback for ramp color and friction
Fixed: clear heat button not appearing on work-energy tab
Made object position slider control properly return object from crash mode